# gpu-checkpointing

./: .gitignore  README.md  pyproject.toml  requirements.txt
gpu_scheduling/: evaluate_timeseries_csv.py  workqueue.py
gpu_scheduling/experiments/single_gpu/: round_robin_equal_jobs.py  run_all_schedulers.py
gpu_scheduling/experiments/single_gpu/baseline/: gpt2_large.py  gpt2_medium.py  gpt2_xl.py  small.py
gpu_scheduling/experiments/single_gpu/lottery_memory_proportional/: lottery_memory_proportional_big_and_small.py  lottery_memory_proportional_one_big_many_small.py
gpu_scheduling/experiments/single_gpu/parallel_gpu2_small/: parallel_gpu2_small.py
gpu_scheduling/experiments/single_gpu/rr_big_and_small/: rr_big_and_small_100s_quanta.py  rr_big_and_small_200s_quanta.py
gpu_scheduling/model_training_scripts/: train_gpt2.py  train_reinforcement.py
results/single_gpu/: combined_timeseries_results.txt
results_gpu_first_run/single_gpu/lottery_memory_proportional/: timeseries.csv
results_gpu_first_run/single_gpu/parallel_gpu2_small/: timeseries.csv
results_gpu_first_run/single_gpu/rr_big_and_small/: timeseries.csv
results_gpu_first_run/single_gpu/rr_equal/: timeseries.csv
results_gpu_second_run/single_gpu/: combined_timeseries_results.txt
results_gpu_second_run/single_gpu/baseline/: timeseries.csv
results_gpu_second_run/single_gpu/lottery_memory_proportional_big_and_small/: timeseries.csv
results_gpu_second_run/single_gpu/lottery_memory_proportional_one_big_many_small/: timeseries.csv
scripts/: train_gpt2.py
(+46 files in other folders)
